<resources>
    <string name="app_name">Vuelos</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="edad">Edad</string>
    <string name="registrarse">registrarse</string>
    <string name="registrar_vuelo">Registrar Vuelo</string>
    <string-array name="arrayPerfil">
        <item>admin</item>
        <item>user</item>
    </string-array>

    <string-array name="arrayPaises">
        <item>Madrid</item>
        <item>Bilbao</item>
        <item>Kingston</item>
        <item>Londres</item>
        <item>Paris</item>
        <item>Roma</item>
    </string-array>


</resources>